# agentbox

./: .gitignore  CLAUDE.md  Cargo.toml  README-CN.md  README.md  install.sh  justfile  plan.md  prd.md
.github/workflows/: ci.yml  release.yml
crates/agentbox-cli/: Cargo.toml
crates/agentbox-cli/src/: main.rs
crates/agentbox-cli/src/cli/: mod.rs
crates/agentbox-cli/src/cli/commands/: config_cmd.rs  daemon.rs  dashboard.rs  edit.rs  history.rs  list.rs  logs.rs  mod.rs  pause.rs  register.rs  remove.rs  resume.rs  run.rs  schedule.rs  upgrade.rs
crates/agentbox-core/: Cargo.toml
crates/agentbox-core/src/: config.rs  error.rs  lib.rs  types.rs  upgrade.rs
crates/agentbox-daemon/: Cargo.toml
crates/agentbox-daemon/src/: daemon.rs  lib.rs
crates/agentbox-daemon/src/alert/: manager.rs  mod.rs
crates/agentbox-daemon/src/executor/: mod.rs  process.rs
crates/agentbox-daemon/src/ipc/: server.rs
crates/agentbox-daemon/src/scheduler/: engine.rs  mod.rs
crates/agentbox-db/: Cargo.toml
crates/agentbox-db/src/: connection.rs  migrations.rs  models.rs
crates/agentbox-db/src/repo/: agent_repo.rs  alert_repo.rs  config_repo.rs  log_repo.rs  mod.rs  run_repo.rs
crates/agentbox-mcp/: Cargo.toml
crates/agentbox-mcp/src/: ipc_client.rs  lib.rs  resources.rs  server.rs  tools.rs
crates/agentbox-web/: Cargo.toml
crates/agentbox-web/src/: api.rs  assets.rs  lib.rs  server.rs
dashboard/: index.html  package-lock.json  package.json  uno.config.js  vite.config.js
dashboard/src/: App.vue  api.js  main.js
dashboard/src/views/: AgentDetail.vue  AgentList.vue  Alerts.vue  Dashboard.vue
