[workspace]
members = [
    "crates/agentbox-core",
    "crates/agentbox-db",
    "crates/agentbox-daemon",
    "crates/agentbox-cli",
    "crates/agentbox-web",
    "crates/agentbox-mcp",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
nix = { version = "0.29", features = ["process", "signal"] }
dirs = "5"
comfy-table = "7"
colored = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
flate2 = "1"
tar = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
