[package]
name = "agentbox-daemon"
version = "0.4.0"
edition = "2021"

[dependencies]
agentbox-core = { path = "../agentbox-core" }
agentbox-db = { path = "../agentbox-db" }
agentbox-web = { path = "../agentbox-web" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
libc = "0.2"
