[package]
name = "agentbox-db"
version = "0.4.0"
edition = "2021"

[dependencies]
agentbox-core = { path = "../agentbox-core" }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
