[package]
name = "agentbox-web"
version = "0.4.0"
edition = "2021"

[dependencies]
agentbox-core = { path = "../agentbox-core" }
agentbox-db = { path = "../agentbox-db" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rust-embed = { workspace = true }
mime_guess = "2"
tokio-stream = "0.1"
async-stream = "0.3"
